Probar otro boton

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
             <!-- Botones numéricos -->
             <div class="row g-2 mb-3">
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(1)">1</button></div>
+              <div class="col-4"><button class="btn btn-primary w-100 fs-4" onclick="agregarNumero(1)">1</button></div>
               <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(2)">2</button></div>
               <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(3)">3</button></div>
               <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(4)">4</button></div>
