Cambios en botones de operaciones

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
             <!-- Operaciones -->
             <div class="row g-2 mb-3">
-              <div class="col-3"><button class="btn btn-outline-dark w-100 fs-4" onclick="seleccionarOperacion('+')">+</button></div>
-              <div class="col-3"><button class="btn btn-outline-dark w-100 fs-4" onclick="seleccionarOperacion('-')">−</button></div>
-              <div class="col-3"><button class="btn btn-outline-dark w-100 fs-4" onclick="seleccionarOperacion('*')">×</button></div>
-              <div class="col-3"><button class="btn btn-outline-dark w-100 fs-4" onclick="seleccionarOperacion('/')">÷</button></div>
+              <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('+')">+</button></div>
+              <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('-')">−</button></div>
+              <div class="col-3"><button class="btn btn-warning-dark w-100 fs-4" onclick="seleccionarOperacion('*')">×</button></div>
+              <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('/')">÷</button></div>
             </div>
 
             <!-- Botón igual -->
