Ajuste de validaciones

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <!-- Mostrar operación actual -->
             <div id="operacionActual" class="text-center text-secondary mb-3 fs-5"></div>
 
-            <!-- Botones numéricos -->
+            <!-- Botones de números -->
             <div class="row g-2 mb-3">
               <div class="col-4"><button class="btn btn-secondary w-100 fs-4" onclick="agregarNumero(1)">1</button></div>
               <div class="col-4"><button class="btn btn-secondary w-100 fs-4" onclick="agregarNumero(2)">2</button></div>
@@ -37,7 +37,7 @@
               <div class="col-4"><button class="btn btn-danger w-100 fs-4" onclick="limpiar()">C</button></div>
             </div>
 
-            <!-- Operaciones -->
+            <!-- Botones de Operaciones -->
             <div class="row g-2 mb-3">
               <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('+')">+</button></div>
               <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('-')">−</button></div>
@@ -45,14 +45,14 @@
               <div class="col-3"><button class="btn btn-warning w-100 fs-4" onclick="seleccionarOperacion('/')">÷</button></div>
             </div>
 
-            <!-- Botón igual -->
+            <!-- Botón para calcular -->
             <div class="row">
               <div class="col-12">
                 <button class="btn btn-success w-100 fs-4" onclick="calcular()">=</button>
               </div>
             </div>
 
-            <!-- Resultado -->
+            <!-- Mostrar Resultado -->
             <div id="resultado" class="text-center mt-4 fs-4 fw-bold text-success"></div>
 
           </div>
