Actualización de botones

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 
             <!-- Botones numéricos -->
             <div class="row g-2 mb-3">
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(1)">1</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(2)">2</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(3)">3</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(4)">4</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(5)">5</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(6)">6</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(7)">7</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(8)">8</button></div>
-              <div class="col-4"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(9)">9</button></div>
-              <div class="col-8"><button class="btn btn-outline-primary w-100 fs-4" onclick="agregarNumero(0)">0</button></div>
-              <div class="col-4"><button class="btn btn-outline-danger w-100 fs-4" onclick="limpiar()">C</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(1)">1</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(2)">2</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(3)">3</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(4)">4</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(5)">5</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(6)">6</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(7)">7</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(8)">8</button></div>
+              <div class="col-4"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(9)">9</button></div>
+              <div class="col-8"><button class="btn btn-secundary w-100 fs-4" onclick="agregarNumero(0)">0</button></div>
+              <div class="col-4"><button class="btn btn-danger w-100 fs-4" onclick="limpiar()">C</button></div>
             </div>
 
             <!-- Operaciones -->
