Ajustes y inserción de imagen

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div class="col-md-6">
         <div class="card shadow rounded-4">
           <div class="card-body">
+            <div class="text-center mb-3">
+              <img src="/img/calculadora.jpg" alt="Logo Calculadora" width="80" class="img-fluid">
+            </div>
             <h2 class="text-center mb-4">Calculadora Web</h2>
 
             <!-- Campo de entrada -->
